Added SP to profile and view profile,changed profile and view profile fragment to activity

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -10,4 +10,5 @@
 <!--        android:endColor="#89216B"-->
 <!--        -->
 <!--        android:angle="0"/>-->
+<!--    <corners android:radius="10dp"/>-->
 </shape>
