--- a/app/src/main/res/layout/activity_jury_voting_media.xml
+++ b/app/src/main/res/layout/activity_jury_voting_media.xml
@@ -1,5 +1,8 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="@drawable/gradient"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
@@ -18,6 +21,7 @@
                 android:layout_below="@+id/t"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
+                android:background="@drawable/white_border"
                 android:gravity="center"
                 android:text="submit" />
 
@@ -48,8 +52,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
+
                                 android:gravity="center_horizontal"
                                 android:text="Participant"
+                                android:textStyle="bold"
                                 android:textColor="@color/black" />
 
                             <TextView
@@ -57,8 +63,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
+                                android:textStyle="bold"
 
-                                android:text="subbmission"
+                                android:text="Subbmission"
                                 android:textColor="@color/black" />
 
                             <TextView
@@ -68,6 +75,8 @@
                                 android:gravity="center_horizontal"
 
                                 android:text="Marks"
+                                android:textStyle="bold"
+
                                 android:textColor="@color/black" />
 
                             <TextView
@@ -77,6 +86,8 @@
                                 android:gravity="center_horizontal"
 
                                 android:text="Comment"
+                                android:textStyle="bold"
+
                                 android:textColor="@color/black" />
 
 
@@ -90,4 +101,4 @@
         </RelativeLayout>
     </ScrollView>
 
-</merge>
+</RelativeLayout>
