--- a/app/src/main/res/layout/dialog_confirm_password.xml
+++ b/app/src/main/res/layout/dialog_confirm_password.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="350dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
@@ -40,10 +40,11 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"
 
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="20dp"
         android:text="CANCEL"
         android:id="@+id/dialogCancel"/>
     <TextView
+        android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
