--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -174,7 +174,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/ic_comment"
+                        android:src="@drawable/com"
                         android:visibility="visible" />
                 </RelativeLayout>
 
