--- a/app/src/main/res/drawable-anydpi/ic_messages.xml
+++ b/app/src/main/res/drawable-anydpi/ic_messages.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFDE33"
+    android:tint="#000000"
     android:alpha="0.8">
     <path
         android:fillColor="#000000"
