--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:startColor="#ffe259"
-        android:endColor="#ffa751"
-        android:angle="0"/>
 <!--    <gradient-->
-<!--        android:startColor="#DA4453"-->
-<!--        android:endColor="#89216B"-->
-<!--        -->
+<!--        android:startColor="#ffe259"-->
+<!--        android:endColor="#ffa751"-->
 <!--        android:angle="0"/>-->
+    <gradient
+
+        android:startColor="@color/scheme8"
+        android:endColor="@color/white"
+      android:angle="-90"/>
 <!--    <corners android:radius="10dp"/>-->
 </shape>
