--- a/app/src/main/res/layout/activity_fragment_create_contest.xml
+++ b/app/src/main/res/layout/activity_fragment_create_contest.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:src="@drawable/ic_add"
         android:elevation="6dp"
-        app:backgroundTint="#FFC107"
+        app:backgroundTint="@color/scheme8"
         app:fabSize="normal"
         android:layout_margin="16dp"
         android:id="@+id/float_btn"
