--- a/app/src/main/res/layout/fragment_notification1.xml
+++ b/app/src/main/res/layout/fragment_notification1.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:textSize="16sp"
-        android:textColor="@color/orange"
+        android:textColor="@color/black"
         android:paddingTop="5dp"
         android:paddingRight="5dp"/>
 
