--- a/app/src/main/res/layout/fragment_viewprofile.xml
+++ b/app/src/main/res/layout/fragment_viewprofile.xml
@@ -43,10 +43,10 @@
 
                     <ImageView
                         android:id="@+id/back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/ic_backarrow"
+                        android:background="@drawable/back_arrow_new"
                         app:layout_constraintBottom_toBottomOf="@+id/textView"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
