--- a/app/src/main/res/layout/promote_item.xml
+++ b/app/src/main/res/layout/promote_item.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
+    android:layout_width="80dp"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@android:color/transparent"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="10dp"
-    app:contentPadding="3dp"
+
+    app:cardElevation="0dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -18,20 +17,22 @@
         android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="50dp"
+        android:layout_width="65dp"
         android:visibility="gone"
-        android:layout_height="50dp"
+        android:layout_height="65dp"
         app:civ_border_width="3dp"
-        app:civ_border_color="#FFEB3B"
+        app:civ_border_color="#FFE500"
         android:layout_gravity="center"
         android:src="@drawable/ic_star"
 android:layout_marginTop="5dp"
         android:id="@+id/story_photo"/>
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="65dp"
+
+        android:layout_height="65dp"
         android:visibility="gone"
         app:civ_border_width="3dp"
+
         app:civ_border_color="@color/grey"
         android:layout_gravity="center"
         android:src="@drawable/ic_star"
@@ -40,7 +41,7 @@ android:layout_marginTop="5dp"
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="username"
+        android:text=""
         android:gravity="center"
         android:id="@+id/story_username"
         android:textColor="@color/black"
@@ -49,7 +50,7 @@ android:layout_marginTop="5dp"
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="None Promoted"
+            android:text=""
             android:id="@+id/footer"
             android:gravity="center"
             android:textSize="8sp"
