Explore + Video upload update
Improved Explore Acrivity
Added functionality to upload and view videos
Improved layout
Minor changes
Bug fixex

--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -34,7 +34,7 @@
                 <ListView
                     android:id="@+id/listview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"></ListView>
+                    android:layout_height="wrap_content" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -116,7 +116,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="visible"
-
                     android:layout_below="@+id/domain"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
