--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,7 @@
     <color name="dot_light_screen3">#93c6fd</color>
     <color name="dot_light_screen4">#e4b5fc</color>
     <color name="green">#4CAF50</color>
+    <color name="brown">#FF3D00</color>
 
     <array name="array_dot_active">
         <item>@color/dot_light_screen1</item>
