--- a/app/src/main/res/layout/dialog_select_post_type.xml
+++ b/app/src/main/res/layout/dialog_select_post_type.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="500dp"
-    android:layout_height="250dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="25dp"
-        android:text="Plz select the post type to u want to upload?"
+        android:text="oi cunt,Plz select the fucking post type to u want to upload?"
         android:textColor="@android:color/black"
         android:textSize="16dp"
         android:paddingBottom="10dp"
