--- a/app/src/main/res/layout/create_contest.xml
+++ b/app/src/main/res/layout/create_contest.xml
@@ -211,21 +211,15 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
-                            android:text="Picture" />
+                            android:text="Image" />
 
                         <RadioButton
-                            android:id="@+id/video"
+                            android:id="@+id/Media_Link"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
-                            android:text="Video" />
+                            android:text="Media Link" />
 
-                        <RadioButton
-                            android:id="@+id/Document"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="5dp"
-                            android:text="Document" />
 
                     </RadioGroup>
                 </LinearLayout>
