--- a/app/src/main/res/layout/snippet_chat_toolbar.xml
+++ b/app/src/main/res/layout/snippet_chat_toolbar.xml
@@ -4,44 +4,31 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:id="@+id/profile_image"
-            android:layout_marginLeft="20dp"
             app:civ_border_color="@color/black"
-            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="2dp"
             app:civ_border_width="0.5dp"
             android:src="@drawable/ic_media"/>
 
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/profile_image"
-            android:layout_centerVertical="true">
+            android:layout_below="@id/profile_image"
+          android:layout_centerHorizontal="true">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/username"
-                android:layout_marginLeft="10dp"
                 android:text="naman"
                 android:textColor="@color/black"
                 android:textSize="22sp"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/username"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/grey"
-                android:textSize="15sp"
-                android:text="online"
-                android:id="@+id/onlineStatus"
-                android:layout_centerVertical="true"
                 />
 
 
